# test-mcp-bearer-auth

./: .env.example  .gitignore  ARCHITECTURE.md  README.md  mcp_test_client.py  pyproject.toml  requirements.txt  server.py
mcp_api_auth/: __init__.py  server.py
